k8s/openshift/db/pfm-db-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pfm-db
  namespace: redis-demo
spec:
  host: pfm-db.<yourdomain.tld>
  port:
    targetPort: redis
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: pfm-db
    weight: 100
  wildcardPolicy: None
