k8s/openshift/db/tr-db-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tr-db
  namespace: redis-demo
spec:
  host: tr-db.<yourdomain.tld>
  port:
    targetPort: redis
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: tr2-db
    weight: 100
  wildcardPolicy: None
